tests/snapshots/identity/q02.snap
---
source: tests/explain_snapshots.rs
description: "-- conjunctive filter + narrow projection on one table\nSELECT c_name, c_acctbal\nFROM customer\nWHERE c_acctbal > 7500.0 AND c_mktsegment = 'BUILDING'"
expression: rendered
---
Project [#0.1, #0.4]
  Filter ((#0.4 > 7500.0) AND (#0.3 = 'BUILDING'))
    Scan #0
