tests/snapshots/identity/q07.snap
---
source: tests/explain_snapshots.rs
description: "-- the same join spelled as a comma-join: P0 executes this as a literal\n-- cross product + filter. Feel the difference vs q06; that pain is P1.\nSELECT o_orderkey, l_partkey, l_quantity\nFROM orders, lineitem\nWHERE o_orderkey = l_orderkey AND l_quantity > 30"
expression: rendered
---
Project [#0.0, #1.1, #1.3]
  Filter ((#0.0 = #1.0) AND (#1.3 > 30))
    Join on=[]
      Scan #0
      Scan #1
