tests/snapshots/identity/q10.snap
---
source: tests/explain_snapshots.rs
description: "-- projection pruning bait: one output column, wide tables underneath\nSELECT o_orderkey\nFROM orders, customer\nWHERE o_custkey = c_custkey AND c_nationkey = 7"
expression: rendered
---
Project [#0.0]
  Filter ((#0.1 = #1.0) AND (#1.2 = 7))
    Join on=[]
      Scan #0
      Scan #1
