tests/snapshots/identity/q12.snap
---
source: tests/explain_snapshots.rs
description: "-- 3-way chain; the selective filter sits on the middle-listed table\nSELECT p_name, l_quantity, o_orderdate\nFROM lineitem, part, orders\nWHERE l_partkey = p_partkey\n  AND l_orderkey = o_orderkey\n  AND p_size = 41"
expression: rendered
---
Project [#1.1, #0.3, #2.4]
  Filter ((#0.1 = #1.0) AND (#0.0 = #2.0) AND (#1.3 = 41))
    Join on=[]
      Join on=[]
        Scan #0
        Scan #1
      Scan #2
